# Genre-Genie-Movie-Summary-Analyzer

./: README.md  download_nltk.py  filter.py  gui.py  main.py  models.py  preprocessing.py  pyproject.toml  setup_nltk.py  translation_audio.py  utils.py
assets/: icons.py  styles.py
